[package]
name = "dummy-examples"
version = "0.1.0"
authors = ["Mohammed Mahfoud <mhd.mahfoud@hotmail.com>"]
edition = "2021"
publish = false

[dependencies]
rand = "0.8.5"
crossterm = "0.27.0"
markup = "0.15.0"
sailfish = "0.8.3"

[[bin]]
name = "generate-random"
path = "generate-random.rs"
test = false

[[bin]]
name = "cross-term"
path = "cross-term.rs"
test = false

[[bin]]
name = "markup"
path = "markup.rs"
test = false

[[bin]]
name = "sailfish"
path = "sailfish.rs"
test = false